--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>The Big Guy Experience</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>The Big Guy Experience</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
