--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>The Big Guy Experience</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>The Big Guy Experience</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -16,10 +16,10 @@
         </nav>
     </header>
     <main>
-        <p>This is my first website hosted on GitHub Pages!</p>
+        <img src="images/cat.jpg" alt="A big guy cat">
     </main>
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 The Big Guy Experience. All rights reserved.</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
