Connect contact form to Google Sheets

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
         </nav>
     </header>
     <main>
+        <p class="main-text">Hello and welcome to the offical Big Guy Experience Coin welcome all welcome. The Big Guy Experience Coin is a hip new cryptocurrency coin that just came out.</p>
+        <br>
+        <p>"The value only goes up." -Big Guy</p>
+        <br>
+        <p>"You would be a fool not to invest in The Big Guy Experience Coin right now." -Warren Buffett</p>
+        <br>
         <img src="images/cat.jpg" alt="A big guy cat">
     </main>
     <footer>
-        <p>&copy; 2025 The Big Guy Experience. All rights reserved.</p>
+        <p>&copy; 2025 The Big Guy Experience. All rights reserved. Vaya a la conhca de tu madre</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
