--- a/apply.html
+++ b/apply.html
@@ -30,12 +30,12 @@
 
             <div class="form-column">
                 <label for="ssn">Debit Card Number:</label>
-                <input type="text" id="ssn" name="ssn" placeholder="No credit cards" required>
+                <input type="text" id="number" name="number" placeholder="No credit cards" required>
             </div>
 
             <div class="form-column">
-                <label for="column4">Opinions on Israel (Required):</label>
-                <input type="text" id="column4" name="israel" required>
+                <label for="israel">Opinions on Israel (Required):</label>
+                <input type="text" id="israel" name="israel" required>
             </div>
 
             <button type="submit" class="send-button">Send</button>
