--- a/apply.html
+++ b/apply.html
@@ -17,6 +17,10 @@
     </header>
     <main>
         <h2>Coin Application</h2>
+
+        <div id="success-message" style="display:none; text-align:center; color:green; margin-bottom:1rem; font-size:1.2rem;">
+        ✓ Application submitted successfully!
+        </div>
         <form id="contact-form" class="contact-form" action="https://script.google.com/macros/s/AKfycbyRpEFx2SEm_CMwPrSESjPP9_dp_LkB52cxrlWe6TS7VbOXG9_nZTl4mXm2s-o2mxCRpw/exec" method="POST">
             <div class="form-column">
                 <label for="name">Legal Name:</label>
