--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header>
         <h1>The Big Guy Experience</h1>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="apply.html">Apply</a>
         </nav>
