--- a/confirmation.html
+++ b/confirmation.html
@@ -10,7 +10,7 @@
     <header>
         <h1>The Big Guy Experience</h1>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="apply.html">Apply</a>
         </nav>
@@ -20,7 +20,7 @@
             <h2>Application Submitted Successfully!</h2>
             <p>Thank you for your application. You will recieve the coin when the coin is ready for you to have.</p>
             <br>
-            <a href="home.html" class="back-button">Return to Home</a>
+            <a href="index.html" class="back-button">Return to Home</a>
         </div>
     </main>
     <footer>
