--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <h2>About Me</h2>
         <p>you give me $100 and then i will give you the coin when the coin is ready for you to have</p>
         <br>
-        <p>"escuchame puta ratita, no me importa ni una mierda de tu vida insigificante, no entiendes que tan pequeño, estupido, gordo, pequeno, patetico, estupido, isignificante, estupido que realmente eres. yo te poderia aplastar con mi dedo de pie si yo quisiera pero no lo hago porque soy benevolente y lo sabes. lo unico que me importa es ganar un monton de dinero por estafar a las idiotas como tu mismo." -Big Guy, Jefe Principal de Big Guy Industries - Big Guy Expo February 10, 2025</p>
+        <p>"escúchame puta ratita, no me importa ni una mierda de tu vida insigificante, no entiendes que tan pequeño, estúpido, gordo, pequeño, patético, estúpido, isignificante, estúpido que realmente eres. yo te podría aplastar con mi dedo de pie si yo quisiera pero no lo hago porque soy benevolente y lo sabes. lo único que me importa es ganar un montón de dinero por estafar a las idiotas como tú mismo." -Big Guy, Jefe Principal de Big Guy Industries - Big Guy Convention, February 10, 2025</p>
     </main>
     <footer>
         <p>&copy; 2025 The Big Guy Experience. All rights reserved. Vaya a la conhca de tu madre.</p>
