--- a/data.html
+++ b/data.html
@@ -17,8 +17,9 @@
         </nav>
     </header>
     <main>
-        <h2>About</h2>
-        <p>you give me $100 and then i will give you the coin when the coin is ready for you to have</p>
+        <h2>The Dat</h2>
+        <p>Welcome to official data. The data has been tested rigorously tested by experts to verify the fact that the value of the Big Guy Experience Cryptocurrency Coin only goes up.</p>
+        <img src="images/thedata.png" alt="A big guy cat">
     </main>
     <footer>
         <p>&copy; 2025 The Big Guy Experience. All rights reserved. Vaya a la conhca de tu madre.</p>
