--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="data.html">The Data</a>
             <a href="apply.html">Apply</a>
         </nav>
     </header>
     <main>
-        <p class="home-text">Hello and welcome to the offical Big Guy Experience Coin welcome all welcome. The Big Guy Experience Coin is a hip new cryptocurrency coin that just came out.</p>
-        <img src="images/cat.jpg" alt="A big guy cat">
+        <p class="home-text">Hello and welcome to the offical Big Guy Experience Coin website welcome all welcome. The Big Guy Experience Coin is a hip new cryptocurrency coin that just came out.</p>
+        <img src="images/bg.png" alt="A big guy cat">
         <br>
         <p class="type3">Reviews:</p>
         <p>"The value only goes up." -Big Guy</p>
@@ -28,7 +29,8 @@
         <br>
         <p>"I thought it was fake until I entered my banking information and then actually recieved the coin when the coin was ready for me to have." -Long Time Big Guy Customer</p>
         <br>
-        <p>Remember to add another fake review here</p>
+        <p>"una vez yo estaba en un cuarto con ese "big guy," y no te miento, el literamente pisoteo a un gato en frente de como veinte personas. pero compre su moneda y estoy bien contento con ella." -Jose Martinez
+</p>
         
     </main>
     <footer>
