--- a/apply.html
+++ b/apply.html
@@ -12,6 +12,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
+            <a href="data.html">The Data</a>
             <a href="apply.html">Apply</a>
         </nav>
     </header>
